# grpc-stuff

./: .gitignore  Cargo.toml  README.md  build.rs  build_proto.sh
app/: Cargo.toml
app/src/: main.rs
app/src/components/: item.rs  list.rs  mod.rs
auth/: .env  Cargo.toml  build.rs  docker-compose.yml
auth/migrations/: 20221102163132_users.sql
auth/src/: main.rs
proto/: auth.proto  route.proto
server/: Cargo.toml  build.rs
server/src/: main.rs
src/: main.rs
