[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
prost = "0.11"
prost-types = "0.11"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "uuid" ] }
tonic = "0.8"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
uuid = { features = ["serde", "v4"], version = "1.2"}

[build-dependencies]
tonic-build = "0.8"